[DATALAB-2151]: Fixed calendar and sticky footer on Safari browser

--- a/services/self-service/src/main/resources/webapp/src/app/reports/audit/audit-grid/audit-grid.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/reports/audit/audit-grid/audit-grid.component.scss
@@ -103,6 +103,7 @@
         th {
           padding: 5px;
           font-size: 13px;
+          z-index: 103 !important;
         }
 
         .filter-field {
